--- a/Python101_2025.ipynb
+++ b/Python101_2025.ipynb
@@ -928,7 +928,7 @@
         "id": "pyVNb30d6uJg",
         "outputId": "a5044c74-0ab6-4739-8f69-672c23eca2d3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +955,7 @@
         "list_a = []\n",
         "print(list_a)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,7 +979,7 @@
         "list_b = [1,5,'v']\n",
         "print(list_b)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1012,7 +1012,7 @@
         "list_c = list()\n",
         "print(list_c)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1045,7 +1045,7 @@
       "source": [
         "list_b[2] #indexing"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1084,7 +1084,7 @@
         "list_b.append('u')\n",
         "print(list_b)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,7 +1108,7 @@
       "source": [
         "list_b.pop() ### ดึงสมาชิกที่สุดท้ายออกจาก list"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1137,7 +1137,7 @@
       "source": [
         "list_b #สามารถเก็บได้ทุกอย่าง อยู่ในlist เดียวกัน"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,7 +1159,7 @@
       "metadata": {
         "id": "lEdpZnSaaBGV"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1175,7 +1175,7 @@
         "list_b.append(list_a)\n",
         "print(list_b)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,13 +1203,13 @@
           "height": 35
         },
         "id": "DNNnCnrUJ3Gy",
-        "outputId": "541c215f-22c0-4c21-fc9a-3073206ba8b1"
+        "outputId": "fa15cc12-cc79-40d4-e686-601e3da50ec7"
       },
       "source": [
         "t = 'python is easy'\n",
         "t"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1222,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 10
         }
       ]
     },
@@ -1239,7 +1239,7 @@
         "id": "8TVdWEB5aw4Y",
         "outputId": "acde2fa4-83cc-4a6d-c558-d793328deadc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1268,7 +1268,7 @@
       "source": [
         "len(list_b) # len คือคำสั่งตรวจสอบความยาวของ list (จำนวนสมาชิก)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1294,7 +1294,7 @@
       "source": [
         "len(t) #ตรวจสอบจำนวนสมาชิก"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1321,7 +1321,7 @@
         "id": "VRtkDqqF-8RS",
         "outputId": "b7137990-3edb-4139-a30a-cbdf7d4db4b4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1350,7 @@
         "id": "Sh4ucD7K_Swm",
         "outputId": "d1a5196f-f298-46e3-f36e-d1b84f5523f3"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1377,7 +1377,7 @@
         "id": "jux68LvT_rA_",
         "outputId": "743fd89e-6697-461c-ca9a-cbfe4e146265"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1411,7 @@
         "id": "ZfkpmvLNFClR",
         "outputId": "3d212558-39cf-465e-a037-44e480cac91d"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1434,7 +1434,7 @@
         "id": "mrPnxRNJChU8",
         "outputId": "e545bdb6-9295-4fc4-d1d5-b4a6664e0783"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1472,7 +1472,7 @@
       "source": [
         "t[0]"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1502,7 +1502,7 @@
       "source": [
         "t[-1]"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1532,7 +1532,7 @@
       "source": [
         "t[-4]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1577,7 +1577,7 @@
       "source": [
         "t = 'python is easy'"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1593,7 +1593,7 @@
         "print(t)\n",
         "print(t[12:17]) #->'sy, r'"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,7 +1630,7 @@
         "id": "DJOb75o5Gpfv",
         "outputId": "682d9b0a-f2f3-463f-8f4b-48cca4def93b"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1686,7 +1686,7 @@
         "id": "8dhhhAOxIGem",
         "outputId": "c2fc7a35-49fb-480a-8e42-c79e572b0adf"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1709,7 +1709,7 @@
       "source": [
         "print(t[10::2])  ## : ตัวที่สอง กำหนด step"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1732,7 +1732,7 @@
         "id": "Oe8MQDq5IRXr",
         "outputId": "bf640b06-9619-4093-d4e0-6b4013f2af45"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1755,7 +1755,7 @@
         "id": "RYDSwol1dK8V",
         "outputId": "0e924110-4805-4fe8-ebb6-0789d627afad"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1782,7 +1782,7 @@
         "id": "ishbRyBnKJkJ",
         "outputId": "e7286717-00ce-474e-d6f9-c79099c61324"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1812,7 +1812,7 @@
         "id": "BdeHrN59Kh9n",
         "outputId": "2dbea339-ee29-42d4-aae4-57f85126bb32"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1836,7 +1836,7 @@
         "id": "pzSz1Q11MUP3",
         "outputId": "e7edb0df-fe8c-4069-e010-c9efd06b4b35"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1860,7 +1860,7 @@
         "id": "WstpRShaPe8I",
         "outputId": "50079873-e13f-4a6b-da99-ff1c826cce32"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1898,7 +1898,7 @@
       "source": [
         "print(list(range(10)))"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1921,7 +1921,7 @@
         "id": "BNDUD3PNd6aU",
         "outputId": "433988e3-1e15-403e-e8e2-9c68c422bbbd"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1946,10 +1946,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 141
         },
         "id": "OoUZt83iJ3G1",
-        "outputId": "9c5c0690-3414-42af-918b-95304cd5db49"
+        "outputId": "1485eb6d-5d00-4a8d-afdc-5ec984d3940f"
       },
       "source": [
         " t + '??'"
@@ -1957,17 +1957,15 @@
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'python is easy??'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 61
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 't' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-9-3225353909.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'??'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 't' is not defined"
+          ]
         }
       ]
     },
@@ -2011,7 +2009,7 @@
       "source": [
         "list_b + list_a"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2037,7 +2035,7 @@
         "id": "FyAgsnCsetMW",
         "outputId": "15bd863c-023a-495b-81e8-35a55c621cfb"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2063,7 +2061,7 @@
         "id": "yis8UVAKexBY",
         "outputId": "f1845ddd-f53d-4e80-fc21-718389fdb813"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2089,7 +2087,7 @@
         "id": "aQLFjupVe1XP",
         "outputId": "ae9def68-98c4-4c72-87a8-6a825023e847"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2102,6 +2100,13 @@
           "execution_count": 79
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "J31_nzoazVbU"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2120,10 +2125,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 35
         },
         "id": "q1_OXBkJfJ0l",
-        "outputId": "7edf99fc-6d15-4260-c1ab-703b52fef2c5"
+        "outputId": "36f32455-1d33-468e-b8b1-b147de1b5c71"
       },
       "execution_count": null,
       "outputs": [
@@ -2138,7 +2143,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 11
         }
       ]
     },
@@ -2149,7 +2154,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AnpBykIoJ3G1",
-        "outputId": "6267966a-f726-4a08-d4e4-fe987c0677f8"
+        "outputId": "0738d492-34e9-4619-a12b-0d9c2b5cb94b"
       },
       "source": [
         "t.split(' ')"
@@ -2164,7 +2169,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 12
         }
       ]
     },
@@ -2186,7 +2191,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KlYa6JHiJ3G2",
-        "outputId": "7dc22de9-42d7-4b7e-a993-2f54cbfb1dd0"
+        "outputId": "bcc966b8-fb9d-452f-be13-df58699a45f0"
       },
       "source": [
         "time.split(':')"
@@ -2201,7 +2206,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 2
         }
       ]
     },
@@ -2212,7 +2217,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nfVAyjasj4dq",
-        "outputId": "4a726ffb-de89-4668-e298-226b6185f28a"
+        "outputId": "937d8937-d0d2-40bc-9273-9ba572062a74"
       },
       "source": [
         "print(t)\n",
@@ -2252,39 +2257,137 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "time = \"12:30:15\"+\",\"+\"Wednesday\""
+      ],
       "metadata": {
         "id": "Tj-A7R2CgBpJ"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "time.split(':')"
+      ],
       "metadata": {
-        "id": "uYDR2G8CgBmb"
+        "id": "uYDR2G8CgBmb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "299de506-bf90-4373-f244-a9d1f59e6896"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['12', '30', '15, Wednesday']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(time)\n",
+        "time_sp = time.split(' ')\n",
+        "print(time_sp)\n",
+        "\n",
+        "## วิธีรวมกลับ\n",
+        "\n",
+        "print(':'.join(time_sp))"
+      ],
       "metadata": {
-        "id": "5PO2iMjhgBi6"
+        "id": "5PO2iMjhgBi6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff5dd168-bc9e-4da6-b102-3da02145d9b0"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12:30:15, Wednesday\n",
+            "['12:30:15,', 'Wednesday']\n",
+            "12:30:15,:Wednesday\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def time_to_seconds(time_str):\n",
+        "    parts = time_str.split(\":\")   # ['12', '30', '15']\n",
+        "    ints = []\n",
+        "    for p in parts:\n",
+        "        ints.append(int(p))\n",
+        "    h, m, s = ints\n",
+        "    return h * 3600 + m * 60 + s\n",
+        "\n",
+        "# แปลงชื่อวันเป็นลำดับเลข\n",
+        "day_to_num = {\n",
+        "    \"Monday\": 0,\n",
+        "    \"Tuesday\": 1,\n",
+        "    \"Wednesday\": 2,\n",
+        "    \"Thursday\": 3,\n",
+        "    \"Friday\": 4,\n",
+        "    \"Saturday\": 5,\n",
+        "    \"Sunday\": 6\n",
+        "}\n",
+        "\n",
+        "lines = [\n",
+        "    \"12:30:15, Wednesday - 13:41:07, Thursday\",\n",
+        "    \"12:53:15, Monday - 00:59:25, Tuesday\",\n",
+        "    \"16:06:09 Sunday - 11:11:11, Tuesday\"\n",
+        "]\n",
+        "\n",
+        "for line in lines:\n",
+        "    start, end = line.split(\" - \")\n",
+        "\n",
+        "    # แยกเวลาและวัน\n",
+        "    time1, day1 = start.replace(\",\", \"\").split()\n",
+        "    time2, day2 = end.replace(\",\", \"\").split()\n",
+        "\n",
+        "    # แปลงเวลาเป็นวินาที + วันเป็นวินาที\n",
+        "    sec1 = time_to_seconds(time1) + day_to_num[day1] * 86400\n",
+        "    sec2 = time_to_seconds(time2) + day_to_num[day2] * 86400\n",
+        "\n",
+        "    # ถ้าเวลาสิ้นสุดมาก่อนเวลาเริ่ม → หมายถึงข้ามสัปดาห์\n",
+        "    if sec2 < sec1:\n",
+        "        sec2 += 7 * 86400\n",
+        "\n",
+        "    diff = sec2 - sec1\n",
+        "    print(f\"{line} => {diff} วินาที\")"
+      ],
       "metadata": {
-        "id": "iao0oTWxgBgD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GaqeEhQgGtDg",
+        "outputId": "f2156af3-df59-4e71-9282-8be4d1a3c9f4"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12:30:15, Wednesday - 13:41:07, Thursday => 90652 วินาที\n",
+            "12:53:15, Monday - 00:59:25, Tuesday => 43570 วินาที\n",
+            "16:06:09 Sunday - 11:11:11, Tuesday => 155102 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
