--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -1198,6 +1198,37 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "09ZMfbLkl0sc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "* https://www.w3schools.com/python/default.asp\n",
+        "* https://scikit-learn.org/stable/user_guide.html\n",
+        "* https://pandas.pydata.org/docs/reference/frame.html\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JOC_peU1kieC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "21VgH1UGkOoW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "UB5fTAr3bPqg"
       },
