--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -308,7 +308,7 @@
       "metadata": {
         "id": "6wzfVo_pTefO"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -323,7 +323,7 @@
         "id": "482E9UnsUMkC",
         "outputId": "762e0d56-029d-4834-bf55-3a36e6697b26"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,7 +346,7 @@
         "id": "YoBCsIw6aB5w",
         "outputId": "e747e4bf-0b6f-49af-df57-9cf18359830b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +365,7 @@
       "metadata": {
         "id": "zGvtnEOGaFbl"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -378,7 +378,7 @@
         "    st = f'ชื่อ {name} นามสกุล {surname} รหัส {ID}'\n",
         "    return st"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -394,7 +394,7 @@
       "source": [
         "print_fullname('แสนสิงห์','663020276-9','กรวลัย')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +424,7 @@
         "id": "vxooaHuHVTDJ",
         "outputId": "6314b40b-59ec-46a6-968a-ad40e8af8709"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
         "    st = f'ชื่อ {name} นามสกุล {surname} รหัส {ID}'\n",
         "    print(st)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -816,7 +816,7 @@
       "metadata": {
         "id": "Yf-uUETxbfcf"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -834,7 +834,7 @@
         "id": "bV6QXzHAcDCq",
         "outputId": "c2fce528-e953-41a0-b7fb-d6d3684fb616"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +872,7 @@
         "id": "cdflPmiOdXtp",
         "outputId": "0f310628-3529-42f7-8a4f-f0a7eee7913b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,7 +907,7 @@
       "metadata": {
         "id": "Y_cPWPKzewFM"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -922,7 +922,7 @@
         "id": "1lO3BaYJfUuF",
         "outputId": "f52829c6-df15-49ff-f993-8acf9d3ad6f3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -974,7 +974,7 @@
         "id": "kc_pNwGNep2l",
         "outputId": "61bb7702-490a-442a-db60-1003d8da6129"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1134,7 +1134,7 @@
         "id": "J1vnf0DFgnEP",
         "outputId": "1881b36b-2b60-4669-957f-00e8421b987b"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1274,14 +1274,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NcT-s7TEbPqg",
-        "outputId": "12a14bbe-f3ff-42c8-bbb3-6f9a0f6097f8"
+        "outputId": "407bee71-a455-4f85-8e6f-ed1db3fd969e"
       },
       "source": [
         "for i in [1,2,3] :\n",
         "    o = i**2\n",
         "    print (f'this member = {i} after process = {o}')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,30 +1307,30 @@
       "cell_type": "code",
       "metadata": {
         "id": "kstoI_CEbPqh",
-        "outputId": "1f66fa4a-09f2-44e8-89e0-299a9388f0c1",
+        "outputId": "2380c235-132e-4707-ae77-9920ad2e10ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "for i in 'Thanapong':\n",
-        "    print(f'{i} -> / ' )"
+        "    print(i,end = '-> /\\n' )"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T -> / \n",
-            "h -> / \n",
-            "a -> / \n",
-            "n -> / \n",
-            "a -> / \n",
-            "p -> / \n",
-            "o -> / \n",
-            "n -> / \n",
-            "g -> / \n"
+            "T-> /\n",
+            "h-> /\n",
+            "a-> /\n",
+            "n-> /\n",
+            "a-> /\n",
+            "p-> /\n",
+            "o-> /\n",
+            "n-> /\n",
+            "g-> /\n"
           ]
         }
       ]
@@ -1339,7 +1339,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "mQmh0Ip-V8qR",
-        "outputId": "0e01aa3e-f288-4865-d65d-2f2711066413",
+        "outputId": "b05debe0-e425-4d61-f344-7fd9b8824de6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1348,7 +1348,7 @@
         "for i in 'Thanapong':\n",
         "    print(f'{i} -> / ' ,end = '') #สั่งให้ print แบบ ไม่เว้นบรรทัด"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1372,7 +1372,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ensAuLXBW-0P",
-        "outputId": "e73e37e9-cdcf-47c4-f47a-765e7188860c",
+        "outputId": "5f0cd0c8-7e03-498b-979b-89b96c8e6112",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1381,7 +1381,7 @@
         "range5_output = range(5)\n",
         "print(list(range5_output))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1396,7 +1396,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "r8JXggPKXrEx",
-        "outputId": "bcb4fe84-093e-4623-d62c-2c227d1cceec",
+        "outputId": "9c5f7ac8-2110-4e8c-b2c7-39d6d8766ffd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1405,7 +1405,7 @@
         "for i in range(100):\n",
         "    print('งง',end=' ')"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1420,7 +1420,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "RLvhNqw8YpKa",
-        "outputId": "19ae69a5-474b-4d30-f4ce-bdeddf084c71",
+        "outputId": "cec2dd10-a7ac-4539-ea44-37df69b1e3e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1428,7 +1428,7 @@
       "source": [
         "list(range(1,11)) #เริ่มต้นเป็นวงทึบ จบเป็นวงกลมโปร่ง เหมือน list slicing"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1438,7 +1438,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 8
         }
       ]
     },
@@ -1446,7 +1446,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MqXQ9NLGcW-r",
-        "outputId": "ab839a9f-525a-40d4-b7d1-4b8f0d4de3a7",
+        "outputId": "29128ad2-eac0-4541-f31b-7133709ea016",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1454,7 +1454,7 @@
       "source": [
         "list(range(-3,20,4))"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1464,7 +1464,80 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### วนลูปโดยลำดับสมาชิกและลำดับ"
+      ],
+      "metadata": {
+        "id": "T-WAx5_FAZuN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "index = 0\n",
+        "for i in 'Konwalai':\n",
+        "    print(f'สมาชิกคือ {i} เป็นลำดับที่ {index}')\n",
+        "    index += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WxvcPqy9Ae0i",
+        "outputId": "45171f4a-8310-41e2-db8d-85f0d5922a6b"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สมาชิกคือ K เป็นลำดับที่ 0\n",
+            "สมาชิกคือ o เป็นลำดับที่ 1\n",
+            "สมาชิกคือ n เป็นลำดับที่ 2\n",
+            "สมาชิกคือ w เป็นลำดับที่ 3\n",
+            "สมาชิกคือ a เป็นลำดับที่ 4\n",
+            "สมาชิกคือ l เป็นลำดับที่ 5\n",
+            "สมาชิกคือ a เป็นลำดับที่ 6\n",
+            "สมาชิกคือ i เป็นลำดับที่ 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i,index in enumerate('Konwalai'):\n",
+        "    print(f'สมาชิกคือ {i} เป็นลำดับที่ {index}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Vx23OpGA8E8",
+        "outputId": "329df397-2766-4ba6-9253-8183957e249c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สมาชิกคือ 0 เป็นลำดับที่ K\n",
+            "สมาชิกคือ 1 เป็นลำดับที่ o\n",
+            "สมาชิกคือ 2 เป็นลำดับที่ n\n",
+            "สมาชิกคือ 3 เป็นลำดับที่ w\n",
+            "สมาชิกคือ 4 เป็นลำดับที่ a\n",
+            "สมาชิกคือ 5 เป็นลำดับที่ l\n",
+            "สมาชิกคือ 6 เป็นลำดับที่ a\n",
+            "สมาชิกคือ 7 เป็นลำดับที่ i\n"
+          ]
         }
       ]
     },
@@ -1482,7 +1555,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "TKRcpd5DbPqi",
-        "outputId": "b18bd9af-fe48-4979-ba91-f8faf2a8787a",
+        "outputId": "5ee2205a-f61f-42bb-8aa1-bf44c77409a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1494,7 +1567,7 @@
         "        print('  ', name1,' x ',name2,' = ',name1*name2)\n",
         "    print('the inner loop is end')"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1542,6 +1615,58 @@
             "   4  x  11  =  44\n",
             "   4  x  12  =  48\n",
             "the inner loop is end\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Quiz 7 วนลูป แสดงค่า ตัวเลขออกมาเป็น 3 เหลี่ยมตามตัวอย่างดังนี้\n",
+        "\n",
+        " ex:\n",
+        " 1\n",
+        "\n",
+        " 2 4\n",
+        "\n",
+        " 3 6 9\n",
+        "\n",
+        " 4 8 12 16\n",
+        "\n",
+        " 5 10 15 20 25"
+      ],
+      "metadata": {
+        "id": "7gbfGHQUClAk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prompt: วนลูป แสดงค่า ตัวเลขออกมาเป็น 3 เหลี่ยมตามตัวอย่างดังนี้\n",
+        "\n",
+        "for i in range(1, 6):\n",
+        "  for j in range(1, i + 1):\n",
+        "    print(i * j, end=' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WRCKoDqrCjnO",
+        "outputId": "bde7acf4-f998-4496-fe2b-671fe7edd78d"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 \n",
+            "2 4 \n",
+            "3 6 9 \n",
+            "4 8 12 16 \n",
+            "5 10 15 20 25 \n"
           ]
         }
       ]
